<resources>
    <string name="app_name">House Location</string>
    <string name="login_title">Login</string>
    <string name="signup_title">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="welcome_text">Welcome!</string>
    <string name="logout_button">Logout</string>
</resources>
